<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16px"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_net_status"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_net_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:text="@string/ui_net_unknown"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16px"
                android:text="@string/ui_expl" />

            <EditText
                android:id="@+id/edit_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ui_url"
                android:inputType="textUri" />

            <EditText
                android:id="@+id/edit_expect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ui_url_content"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_btn_save" />

                <Button
                    android:id="@+id/btn_resest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:text="@string/ui_btn_defaults" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_log_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_log" />

            <TextView
                android:id="@+id/txt_log_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_dark"
                android:padding="16px"
                android:layout_marginBottom="16dp"
                android:text="@string/ui_log_dummy"
                android:textColor="@android:color/holo_green_light" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>